--- a/cca4.html
+++ b/cca4.html
@@ -33,6 +33,7 @@
 <h2>CONTACT US:</h2>
 <h3>National Institute Of Technology, Durgapur <br>
 Mahatma Gandhi Road, Durgapur, West Bengal-713209, INDIA</h3><br>
-<center>© 2019 National Institute of Technology Durgapur</center>
+<center>ï¿½ 2019 National Institute of Technology Durgapur</center>
+<br>
 </body>
 </html>
