--- a/cca.html
+++ b/cca.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="keywords" content="CCA,NIT durgapur,WDCT,Robo cell,R&D cell,aarohan">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CCA NIT DURGAPUR</title>
+<title>Center for Cognitive Activites</title>
 <style>
 body {
   margin: 0;
@@ -169,6 +169,6 @@ body {
 <h2>CONTACT US:</h2>
 <h3>National Institute Of Technology, Durgapur <br>
 Mahatma Gandhi Road, Durgapur, West Bengal-713209, INDIA</h3><br>
-<center>© 2019 National Institute of Technology Durgapur</center>
+<center>ï¿½ 2019 National Institute of Technology Durgapur</center>
 </body>
 </html>
