--- a/cca.html
+++ b/cca.html
@@ -152,13 +152,13 @@ body {
 <center>Aarohan 2018 is back with the promise of bringing the best in both the worlds of Techno-Management. It aims at bringing out the genius hidden in us that has so long been shielded. Aarohan has witnessed participation as large as 4000 and it promises to grow beyond this. Aarohan is a combined efforts of the </center>
 <center>students and the teachers who have been visionaries in the growth of Aarohan.</center>
 <center>The college is all set to be a part of this hysterical fever!! So come, join the bandwagon and lets celebrate the joy of innovation. CCA organises an array of events throughout the year in order to inculcate and unleash intuitive ideas and skills aiming particularly towards guiding students to create an environment to </center>
-<center>produce a quality of resource pool.</center>
+<center>produce a quality of resource pool...</center>
 <br>
 <br><br><br><br>
 <div class="hero-image">
   <div class="hero-text">
     <h1 style="font-size:50px"><font color="white"><i>Center for Cognitive Activities</i></font></h1>
-    <h2><font color="yellow">AUDITIONS 2019</font></h2>
+    <h2><font color="yellow">AUDITION 2019</font></h2>
     <button><a href="cca3.html" target="_blank">Register here</a></button>
   </div>
 </div>
@@ -169,6 +169,6 @@ body {
 <h2>CONTACT US:</h2>
 <h3>National Institute Of Technology, Durgapur <br>
 Mahatma Gandhi Road, Durgapur, West Bengal-713209, INDIA</h3><br>
-<center>© 2019 National Institute of Technology Durgapur</center>
+<center>ï¿½ 2019 National Institute of Technology Durgapur</center>
 </body>
 </html>
