--- a/cca.html
+++ b/cca.html
@@ -89,8 +89,8 @@ body {
 
 <center><font size="60">CCA CELLS</font></center>
 <center><hr color="dodgerblue" width="300"></center>
-<center style="font-size:25px;">CCA is divided into five cells which work together in collaboration with each other. We believe in the fact that togetherness yields excellent results.</center>
-<center style="font-size:25px;">These cells basically function to cover every aspect required for the success of an organisation</center>
+<center style="font-size:25px;">CCA is divided into five cells which work together in collaboration with each other. We believe in the fact that togetherness yields excellent result.</center>
+<center style="font-size:25px;">These cells basically function to cover every aspect required for the success of an organisation.</center>
 <br><br><br><br>
 <table width="100%" height="150">
     <tr>
