--- a/cca2.htm
+++ b/cca2.htm
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="keywords" content="CCA,NIT durgapur,WDCT,Robo cell,R&D cell,aarohan">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CCA NIT DURGAPUR</title>
+<title>CCA NIT DGP</title>
 </head>
 <body>
 
